--- a/DeviceFrontend/Components/Layout/MainLayout.razor
+++ b/DeviceFrontend/Components/Layout/MainLayout.razor
@@ -1,5 +1,10 @@
 ﻿@inherits LayoutComponentBase
 
+
+<HeadContent>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
+</HeadContent>
+
 <div class="page">
     <div class="sidebar">
         <NavMenu />
