status button fix

--- a/DeviceFrontend/Components/Pages/Home.razor
+++ b/DeviceFrontend/Components/Pages/Home.razor
@@ -54,7 +54,7 @@ else
                      <td style="color:@(device.IsOn ? "green" : "red")">
                         @(device.IsOn
                             ? @<i class="bi bi-toggle-on fs-1"></i>
-                            : @<i class="bi bi-toggle-off fs-"></i>)
+                            : @<i class="bi bi-toggle-off fs-1"></i>)
                     </td>
                         <td>
 
